--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/turf": "^5.1.6",
+    "axios": "^0.19.0",
     "google-map-react": "^1.1.4",
+    "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.5.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
