--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-leaflet": "^2.4.0",
     "react-map-gl": "^5.0.3",
     "react-scripts": "3.0.1",
-    "react-simple-maps": "^0.12.1"
+    "react-simple-maps": "^0.12.1",
+    "react-tooltip": "^3.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
